--- a/style.css
+++ b/style.css
@@ -77,11 +77,12 @@ body{
     background-color: grey;
     height: 12rem;
     width: 30rem;
+    object-fit: fill;
 }
 
 
 .info-headerCtn{
-    height: 25rem;
+    /* height: 25rem; */
     display: flex;
     flex-direction: column;
     padding: 1rem;
@@ -116,12 +117,19 @@ body{
 }
 
 .card-img{
-    height: 10rem;
-    width: 10rem;
+    height: 11rem;
+    width: 11rem;
     border-style: solid;
     border-width: medium;
     border-radius: 0.5rem;
     border-color: #3882f6;
+}
+
+.image{
+    object-fit: fill;
+    height: 100%;
+    width: 100%;
+    border-radius: 0.25rem;
 }
 
 .card-text{
@@ -159,4 +167,51 @@ body{
     text-align: end;
     font-size: 18px;
     font-weight: bolder;
+}
+
+.action-headerCtn{
+    display: flex;
+    justify-content: center;
+}
+
+.action-ctn{
+    margin: 5rem;
+    background-color: #3882f6;
+    display: flex;
+    justify-content: center;
+    gap: 2rem;
+    align-items: center;
+    height: 10rem;
+    width: 70rem;
+    border-radius: 1rem;
+}
+
+.action-text{
+    padding: 1rem;
+    font-size: 1.5rem;
+}
+
+
+.action-btn{
+    border-radius: 0.5rem;
+    border-color: white;
+    height: 2rem;
+    width: 7rem;
+    color: white;
+    font-size: 1rem;
+    background-color: #3882f6;
+}
+
+.footer{
+    background-color: #1F2937;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer-text{
+
+    padding: 2rem;
+    height: 5rem;
 }
